# CAMBALA

./: !tail-n+2_all.sh  .gitignore  .gitmodules  12_hydro_R_weighted.txt  13_hydro_R_uniform.txt  14_bottom_R_uniform.txt  15_bottom_R_weighted.txt  16_hydro_c04_weighted.txt  50_ac_modes_R7km_dtimes.txt  50_ac_modes_R7km_spmag.txt  51_hydro_r_uniform260.txt  8000_extracted.txt  8000_extracted_1.txt  Acoustics-at-home.cbp  Acoustics-at-home.depend  Acoustics-at-home.layout  Acoustics-at-home.sln  Acoustics-at-home.vcxproj  Acoustics-at-home.vcxproj.filters  Acoustics_restrictions.xlsm  CAMBALA_test.vcxproj.filters  LICENSE  Makefile  Makefile_seq  README.md  SSPEMDD.sln  SSPEMDD.vcxproj  SSPEMDD.vcxproj.filters  SSPEMDD_results.xlsm  SSPEMDD_scenario12.txt  Zaikin_Petrov.doc  Zaikin_Petrov_SMC-2015.doc  bisect_cpu.cpp  bisect_cpu.h  bisect_gpu.h  bisect_test.cpp  cambala_out  cambala_parallel.cpp  cambala_parallel.h  cambala_sequential.cpp  (+26 more)
21_28_zr50_R7000_f210_chirp/: 26_hydro_c04_uniform.txt  27_hydro_c05_weighted.txt
31-312_3chirps_jan2017_zr50_R7000_f160/: 32_hydro_R_uniform160.txt
31-312_3chirps_jan2017_zr50_R7000_f160_260/: 311_bottom_R_uniform260.txt  33_bottom_R_uniform160.txt  35_hydro_R_weighted210.txt  38_bottom_R_weighted210.txt
31-312_3chirps_jan2017_zr50_R7000_f210/: 36_hydro_R_uniform210.txt
31-312_3chirps_jan2017_zr50_R7000_f260/: 312_bottom_R_weighted260.txt
41-46_3chirps_jan2017_zr50_R7000_f260/: 41_hydro_R_uniform260.txt  42_hydro_R_weighted260.txt  43_hydro_R_uniform260.txt  44_hydro_R_weighted260.txt  45_hydro_R_uniform260.txt  46_hydro_R_weighted260.txt  47_hydro_R_uniform260.txt  48_hydro_R_weighted260.txt  51_hydro_r_uniform260.txt
Matlab/: ModesAccuracyCheckPekeris.m  ac_modes.m  vgr_test_cpp.m
Release x64/: out  test_hydro_r_uniform260_3layers.txt
UnitTestHomogBottom1/: UnitTestHomogBottom1.vcxproj  UnitTestHomogBottom1.vcxproj.filters  unittest1.cpp
VS_boinc_app/: cambala_boinc_app.sln  cambala_boinc_app.vcxproj.filters
VS_cambala/: VS_cambala.sln  VS_cambala.vcxproj  VS_cambala.vcxproj.filters  cambala_out
boinc_app/: in  (+3 more)
src/inversion_tools/: CMakeLists.txt  Makefile_par  parallel.cpp  sequential.h
src/normal_modes/: CMakeLists.txt  Makefile  example.cpp  main.cpp  normal_modes.cpp  normal_modes.h
(+617 files in other folders)
